:lipstick: Fix sidebar display on mobile in mag Article

--- a/public/styles/mag.styl
+++ b/public/styles/mag.styl
@@ -4,12 +4,9 @@
 /* MAG STYLES */
 #mag
 	&-container
-		& #krakmag-logo
+		& .krakmag-logo
 			width: 100%
 			max-width: 250px
-
-			+mq($from: "medium")
-				margin-bottom: 0.5rem
 
 		& .feed-sidebar
 			&-header
@@ -23,6 +20,7 @@
 				& .feed-sidebar-nav-header-toggle-button
 					+mq($from: "medium")
 						display: none
+
 
 	//article
 	&-article
@@ -42,21 +40,34 @@
 			max-width: 80%
 
 		&-container
-			margin-top: -2rem
-
-			+mq($from: "small")
-				margin: 0
-
-			.feed-sidebar
-				order: 2
-
-			& #krakmag-logo
-				display: none
+			& .krakmag-logo
+				width: 100%
+				max-width: 250px
+				margin-bottom: 2rem
 
 				+mq($from: "medium")
-					display: block
+					display: none
 
+			& .feed-sidebar
+				order: 2
 
+				&-header
+					display: none
+					margin-bottom: 0
+					border-bottom: 0
+
+					&-title
+						position: absolute
+						opacity: 0
+
+					+mq($from: "medium")
+						display: block
+
+					& .krakmag-logo
+						display: none
+
+						+mq($from: "medium")
+							display: block
 
 		&-actions
 			display: flex
